# elm-rust-template

./: Cargo.toml  LICENSE_MIT  README.md  cargo-generate.toml
src/: lib.rs
www/: .gitignore  elm.js  index.html  index.js  manifest.json  package-lock.json  package.json  webpack.config.js
www/src/: Main.elm
